# ByteCourier

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  Connection.cpp  Connection.h  DataGeneratorThread.cpp  DataGeneratorThread.h  DataSourceStructure.h  MainWindow.cpp  MainWindow.h  main.cpp
